Solve issue with incorrectly displayed cyrillic letters in emails