@@ -3,12 +3,14 @@ package com.group.atelier.util.mail;
 import com.group.atelier.model.entity.Client;
 import com.group.atelier.security.RegistrationTokenRepository;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 
 @Service
 @RequiredArgsConstructor
@@ -35,6 +37,7 @@ public class EmailService {
     }
 
     private String getContentTemplate() throws IOException {
-        return new String(getClass().getResourceAsStream(CONTENT_TEMPLATE_FILE_PATH).readAllBytes());
+        var inputStream = getClass().getResourceAsStream(CONTENT_TEMPLATE_FILE_PATH);
+        return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
     }
 }
